[project]
name = "explanation-under-shift"
version = "0.1.0"
dependencies = [
  "numpy==2.0.2",
  "torch==2.9.0",
  "torchvision==0.24.0",
  "torchaudio==2.9.0",
  "huggingface_hub==1.4.1",
  "safetensors==0.7.0",
  "matplotlib==3.10.8",
  "opencv-python-headless>=4.10,<4.11",
  "tqdm==4.67.3",
  "packaging==26.0",
  "quantus==0.6.0",
  "grad-cam==1.5.5",
  "metaquantus",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]